<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_update">Update</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_credits">Version 1.05\nTemporaryButtons\n\nWritten by Pontus Oldberg @ Electronic Sweet Peas.</string>
    <string name="string_welcome">To see and change the settings, move your phone close to the NFC antenna of your target system.</string>
    <string name="settings_detected_system">Detected System</string>
    <string name="settings_detected_system_sub">The SweetPea name of the system that was detected</string>
    <string name="settings_DHCP">DHCP</string>
    <string name="settings_DHCP_sub">Selecting this switch enables DHCP resolution.</string>
    <string name="settings_IP_address">IP Address</string>
    <string name="settings_Netmask">Netmask</string>
    <string name="settings_Default_Gateway">Default Gateway</string>
    <string name="settings_Webserver_Port">Webserver Port</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>