<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.sweetpeas.android.nfcsettings.BlankFragment">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <requestFocus />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_detected_system"
                        android:id="@+id/textView"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_detected_system_sub"
                        android:id="@+id/textView2"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/espSystemName"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_DHCP"
                        android:id="@+id/textView3"
                        android:layout_marginLeft="20dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_DHCP_sub"
                        android:id="@+id/espEnableDhcp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:checked="false"
                        android:onClick="onCheckboxClicked" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_IP_address"
                        android:id="@+id/txtEspIpAddress"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/espIpAddress"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_Netmask"
                        android:id="@+id/textView5"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/espNetmask"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_Default_Gateway"
                        android:id="@+id/textView6"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/espGateway"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/settings_Webserver_Port"
                        android:id="@+id/textView4"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/espWebServerport"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp" />

                </LinearLayout>
            </ScrollView>
</FrameLayout>
